A little housekeeping on structure

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 navigation.home=Home
+navigation.login = Login
+navigation.contact_us = Contact us
 
-users.empty = No users found!
 users.title = All users
 user.username= Username
 user.email =Email
@@ -9,5 +10,3 @@ user.lastName=Last name
 user.isAdmin = Admin
 user.password = Password
 user.already-exists = This user already exists!
-user.delete= Delete
-user.cancel=Cancel
