Front end & CSS

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,4 @@ user.lastName=Last name
 user.isAdmin = Admin
 user.password = Password
 user.already-exists = This user already exists!
+user.profile_picture = Profile picture
