User details page updated

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,19 @@
 navigation.home=Home
-navigation.login = Login
-navigation.contact_us = Contact us
-
-users.title = All users
-user.username= Username
-user.email =Email
+navigation.login=Login
+navigation.contact_us=Contact us
+users.title=All users
+user.username=Username
+user.email=Email
 user.firstName=First name
 user.lastName=Last name
-user.isAdmin = Admin
-user.password = Password
-user.already-exists = This user already exists!
-user.profile_picture = Profile picture
+user.isAdmin=Admin
+user.password=Password
+user.already-exists=This user already exists!
+user.profile_picture=Profile picture
+user.send_funds=Send funds to 
+user.request_funds=Request funds from 
+user.poke=Poke
+
+user.send_funds_msg=Send funds quickly and reliably form your wallet to this user
+user.request_funds_msg=Make a request for funding from this user
+user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
