--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,12 +11,13 @@ user.password=Password
 user.already-exists=This user already exists!
 user.login = Login
 user.logout = Logout
-user.wallet = Wallet
+user.my_wallet = My Wallet
+user.my_transactions = My Transactions
 user.edit_profile = Edit Profile
 
 user.profile_picture=Profile picture
-user.send_funds=Send funds to 
-user.request_funds=Request funds from 
+user.send_funds=Send funds to
+user.request_funds=Request funds from
 user.poke=Poke
 user.send_funds_msg=Send funds quickly and reliably form your wallet to this user
 user.request_funds_msg=Make a request for funding from this user
