--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ user.poke=Poke
 user.send_funds_msg=Send funds quickly and reliably form your wallet to this user
 user.request_funds_msg=Make a request for funding from this user
 user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
+user.cpanel = Control Panel
 
 server.403 = Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation = Seems you have run into a 403 error. Here`s a little haiku for compensation:
