Added phone number to User. Added edit phone number in user details and in admin panel view.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,16 @@ user.logout = Logout
 user.my_wallet = My Wallet
 user.my_transactions = My Transactions
 user.edit_profile = Edit Profile
+user.management = User Management
+user.phone_details = User phone:
+user.level_details = User Level:
+user.email_details = Email:
+user.block = Block
+user.unblock = Unblock
+user.delete = Delete
+user.phone_edit = Phone
+user.update_success_title = Update operation completed successfully
+user.update_success = The requested operation was completed successfully. You can now return to the homepage.
 
 user.profile_picture=Profile picture
 user.send_funds=Send funds to
