Added search bar in header

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ user.delete = Delete
 user.phone_edit = Phone
 user.update_success_title = Update operation completed successfully
 user.update_success = The requested operation was completed successfully. You can now return to the homepage.
+user.search_placeholder = Search users...
 
 user.profile_picture=Profile picture
 user.send_funds=Send funds to
