Search by username functionality implemented

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,7 @@ user.phone_edit = Phone
 user.update_success_title = Update operation completed successfully
 user.update_success = The requested operation was completed successfully. You can now return to the homepage.
 user.search_placeholder = Search users...
-
+user.search_by_name = List of users matching your search
 user.profile_picture=Profile picture
 user.send_funds=Send funds to
 user.request_funds=Request funds from
@@ -42,5 +42,6 @@ server.404_explanation = An old, boring 404 error has occurred. You may be cheer
 server.404_specific = Specific 404 error has occurred:
 server.413 = Request entity too large
 server.415 = Unsupported media type
+server.781 = Searching for less than 3 symbols is not allowed here, as you'll likely generate too many matches. Try using at least 3 symbols.
 server.unauthorized = You have attempted to perform an unauthorized operation.
 server.unauthorized_title = 401
