--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,6 +34,7 @@ user.send_funds_msg=Send funds quickly and reliably form your wallet to this use
 user.request_funds_msg=Make a request for funding from this user
 user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
 user.cpanel = Control Panel
+user.already_exists_msg = As per usual, the good usernames are already taken. Pick another...
 
 server.403 = Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation = Seems you have run into a 403 error. Here`s a little haiku for compensation:
