--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,23 +9,23 @@ user.lastName=Last name
 user.isAdmin=Admin
 user.password=Password
 user.already-exists=This user already exists!
-user.login = Login
-user.logout = Logout
-user.my_wallet = My Wallet
-user.my_transactions = My Transactions
-user.edit_profile = Edit Profile
-user.management = User Management
-user.phone_details = User phone:
-user.level_details = User Level:
-user.email_details = Email:
-user.block = Block
-user.unblock = Unblock
-user.delete = Delete
-user.phone_edit = Phone
-user.update_success_title = Update operation completed successfully
-user.update_success = The requested operation was completed successfully. You can now return to the homepage.
-user.search_placeholder = Search users...
-user.search_by_name = List of users matching your search
+user.login=Login
+user.logout=Logout
+user.my_wallet=My Wallet
+user.my_transactions=My Transactions
+user.edit_profile=Edit Profile
+user.management=User Management
+user.phone_details=User phone:
+user.level_details=User Level:
+user.email_details=Email:
+user.block=Block
+user.unblock=Unblock
+user.delete=Delete
+user.phone_edit=Phone
+user.update_success_title=Update operation completed successfully
+user.update_success=The requested operation was completed successfully. You can now return to the homepage.
+user.search_placeholder=Search users...
+user.search_by_name=List of users matching your search
 user.profile_picture=Profile picture
 user.send_funds=Send funds to
 user.request_funds=Request funds from
@@ -33,16 +33,20 @@ user.poke=Poke
 user.send_funds_msg=Send funds quickly and reliably form your wallet to this user
 user.request_funds_msg=Make a request for funding from this user
 user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
-user.cpanel = Control Panel
-user.already_exists_msg = As per usual, the good usernames are already taken. Pick another...
+user.cpanel=Control Panel
+user.already_exists_msg=As per usual, the good usernames are already taken. Pick another...
+user.verify_ok=Congratulations, your email has been verified.
+user.verify_ok_msg=<a th:href="@{/auth/login}">Click here to Login</a>
+user.verify_nok=Email verification fail
+user.verify_nok_msg=Sorry, we could not verify account. It maybe already verified or the verification code is incorrect.
 
 server.403 = Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
-server.403_explanation = Seems you have run into a 403 error. Here`s a little haiku for compensation:
-server.404 =  In realms unknown, a quest I made,<br>On paths untraveled, hopes displayed.<br>Yet in the void, a truth resounds,<br>404, the answer found.<br><br>A page unfounded, a tale untold,<br>A mystery wrapped in digital gold.<br>In pixels lost, a digital waltz,<br>404, where dreams exhaust.<br><br>But in this realm of code and screen,<br>A lesson learned, a truth foreseen.<br>In every stumble, we find a clue,<br>To persevere and journey anew.
-server.404_explanation = An old, boring 404 error has occurred. You may be cheered up by a little poem about it:
-server.404_specific = Specific 404 error has occurred:
-server.413 = Request entity too large
-server.415 = Unsupported media type
-server.781 = Searching for less than 3 symbols is not allowed here, as you'll likely generate too many matches. Try using at least 3 symbols.
-server.unauthorized = You have attempted to perform an unauthorized operation.
-server.unauthorized_title = 401
+server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
+server.404=In realms unknown, a quest I made,<br>On paths untraveled, hopes displayed.<br>Yet in the void, a truth resounds,<br>404, the answer found.<br><br>A page unfounded, a tale untold,<br>A mystery wrapped in digital gold.<br>In pixels lost, a digital waltz,<br>404, where dreams exhaust.<br><br>But in this realm of code and screen,<br>A lesson learned, a truth foreseen.<br>In every stumble, we find a clue,<br>To persevere and journey anew.
+server.404_explanation=An old, boring 404 error has occurred. You may be cheered up by a little poem about it:
+server.404_specific=Specific 404 error has occurred:
+server.413=Request entity too large
+server.415=Unsupported media type
+server.781=Searching for less than 3 symbols is not allowed here, as you'll likely generate too many matches. Try using at least 3 symbols.
+server.unauthorized=You have attempted to perform an unauthorized operation.
+server.unauthorized_title=401
