--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,11 @@ user.verify_ok=Congratulations, your email has been verified.
 user.verify_ok_msg=<a th:href="@{/auth/login}">Click here to Login</a>
 user.verify_nok=Email verification fail
 user.verify_nok_msg=Sorry, we could not verify account. It maybe already verified or the verification code is incorrect.
+user.register_ok=You have signed up successfully!
+user.register_ok_msg=<p>Please check your email to verify your account.</p><a th:href="@{/login}">Click here to Login</a>
+user.view_deleted= User was deleted
+user.view_deleted_msg=This user was deleted in our system
+user.has_pokes = Pokes
 
 server.403 = Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
