--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,12 +1,9 @@
 navigation.home=Home
-navigation.login=Login
-navigation.contact_us=Contact us
 users.title=All users
 user.username=Username
 user.email=Email
 user.firstName=First name
 user.lastName=Last name
-user.isAdmin=Admin
 user.password=Password
 user.already-exists=This user already exists!
 user.login=Login
@@ -26,7 +23,6 @@ user.update_success_title=Update operation completed successfully
 user.update_success=The requested operation was completed successfully. You can now return to the homepage.
 user.search_placeholder=Search users...
 user.search_by_name=List of users matching your search
-user.profile_picture=Profile picture
 user.send_funds=Send funds to
 user.request_funds=Request funds from
 user.poke=Poke
@@ -44,6 +40,9 @@ user.register_ok_msg=<p>Please check your email to verify your account.</p><a th
 user.view_deleted=User was deleted
 user.view_deleted_msg=This user was deleted in our system
 user.has_pokes=Pokes
+user.request_funds_menu=Request Funds
+user.request_funds_heading=Find the user you want to request funds from
+
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
 server.404=In realms unknown, a quest I made,<br>On paths untraveled, hopes displayed.<br>Yet in the void, a truth resounds,<br>404, the answer found.<br><br>A page unfounded, a tale untold,<br>A mystery wrapped in digital gold.<br>In pixels lost, a digital waltz,<br>404, where dreams exhaust.<br><br>But in this realm of code and screen,<br>A lesson learned, a truth foreseen.<br>In every stumble, we find a clue,<br>To persevere and journey anew.
@@ -56,3 +55,11 @@ server.500_specific=Specific 500 error, message below:<br />
 server.781=Searching for less than 3 symbols is not allowed here, as you'll likely generate too many matches. Try using at least 3 symbols.
 server.unauthorized=You have attempted to perform an unauthorized operation.
 server.unauthorized_title=401
+
+site.about_us=About Us
+site.about_us_msg=Hey there! We're the WalletWizards, a bunch of tech-savvy misfits on a mission to turn wallet woes into wallet whoops of joy. We've brewed up THE wallet app! Join us and let's make your money dance while we sprinkle some financial magic and fun into your life!
+site.team_msg= Our team is wild, yet incredibly focused. In the fast-paced world of finance and money management, trustworthiness is our cornerstone. We've earned our stripes by safeguarding your hard-earned funds with unwavering dedication. Every decision we make, every action we take, is rooted in transparency and integrity. Your financial security is our top priority, and we're here to ensure that your money is in safe hands. We're just missing a bold-headed panda.
+site.solving=We Solve Your Financial Problem
+
+site.solving_msg=Welcome to a new era of financial ease with our one-of-a-kind wallet app. Built on the foundation of Java and Thymeleaf, our app offers a seamless solution to send money securely from one user to another. We don't just transfer funds; we ensure each transaction is guarded by cutting-edge security, all while offering an intuitive experience that makes your financial journey effortless.
+site.solving_msg_additional=Behind our exceptional app stands a remarkable team dedicated to excellence. From innovative security measures to a user-friendly interface, we've combined the best of technology and expertise to provide you with the ultimate financial solution. Choose us for secure, swift, and exceptional money transfers that redefine the way you manage your finances.
