Front end update: FAQ/Team/Terms/AboutUs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -60,6 +60,7 @@ site.about_us=About Us
 site.about_us_msg=Hey there! We're the WalletWizards, a bunch of tech-savvy misfits on a mission to turn wallet woes into wallet whoops of joy. We've brewed up THE wallet app! Join us and let's make your money dance while we sprinkle some financial magic and fun into your life!
 site.team_msg= Our team is wild, yet incredibly focused. In the fast-paced world of finance and money management, trustworthiness is our cornerstone. We've earned our stripes by safeguarding your hard-earned funds with unwavering dedication. Every decision we make, every action we take, is rooted in transparency and integrity. Your financial security is our top priority, and we're here to ensure that your money is in safe hands. We're just missing a bold-headed panda.
 site.solving=We Solve Your Financial Problem
-
+site.terms = Terms and Conditions for Wallet App
 site.solving_msg=Welcome to a new era of financial ease with our one-of-a-kind wallet app. Built on the foundation of Java and Thymeleaf, our app offers a seamless solution to send money securely from one user to another. We don't just transfer funds; we ensure each transaction is guarded by cutting-edge security, all while offering an intuitive experience that makes your financial journey effortless.
 site.solving_msg_additional=Behind our exceptional app stands a remarkable team dedicated to excellence. From innovative security measures to a user-friendly interface, we've combined the best of technology and expertise to provide you with the ultimate financial solution. Choose us for secure, swift, and exceptional money transfers that redefine the way you manage your finances.
+site.faq = Frequently Asked Questions
