User verification required for login. User now can verify by link or by manually entering the code

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -64,3 +64,6 @@ site.terms = Terms and Conditions for Wallet App
 site.solving_msg=Welcome to a new era of financial ease with our one-of-a-kind wallet app. Built on the foundation of Java and Thymeleaf, our app offers a seamless solution to send money securely from one user to another. We don't just transfer funds; we ensure each transaction is guarded by cutting-edge security, all while offering an intuitive experience that makes your financial journey effortless.
 site.solving_msg_additional=Behind our exceptional app stands a remarkable team dedicated to excellence. From innovative security measures to a user-friendly interface, we've combined the best of technology and expertise to provide you with the ultimate financial solution. Choose us for secure, swift, and exceptional money transfers that redefine the way you manage your finances.
 site.faq = Frequently Asked Questions
+site.email_unverified = Email not verified
+site.email_unverified_msg = You need to verify your email before logging in
+site.verify_explanation=You can verify it manually here, by entering the verification code you have received on your email
