Implemented working site contact form from index and /contact

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,6 +55,8 @@ server.500_specific=Specific 500 error, message below:<br />
 server.781=Searching for less than 3 symbols is not allowed here, as you'll likely generate too many matches. Try using at least 3 symbols.
 server.unauthorized=You have attempted to perform an unauthorized operation.
 server.unauthorized_title=401
+server.generic_title=Internal Server Error
+server.generic_msg=You have most likely hit 500 error page. Return home?
 
 site.about_us=About Us
 site.about_us_msg=Hey there! We're the WalletWizards, a bunch of tech-savvy misfits on a mission to turn wallet woes into wallet whoops of joy. We've brewed up THE wallet app! Join us and let's make your money dance while we sprinkle some financial magic and fun into your life!
@@ -67,3 +69,5 @@ site.faq = Frequently Asked Questions
 site.email_unverified = Email not verified
 site.email_unverified_msg = You need to verify your email before logging in
 site.verify_explanation=You can verify it manually here, by entering the verification code you have received on your email
+site.contact_title=Message successfully send
+site.contact_msg=You`ve sent your message successfully! Wait until you hear back from us! Should not be long.
