--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,6 +42,10 @@ user.view_deleted_msg=This user was deleted in our system
 user.has_pokes=Pokes
 user.request_funds_menu=Request Funds
 user.request_funds_heading=Find the user you want to request funds from
+user.cancel = Cancel
+user.change-password = Change password
+user.pass_change_ok=Password successfully changed
+user.pass_change_ok_msg=You have updated your passwords successfully. Now write it on a sticker and glue it to your monitor.
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
