--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,6 +47,7 @@ user.change-password = Change password
 user.pass_change_ok=Password successfully changed
 user.pass_change_ok_msg=You have updated your passwords successfully. Now write it on a sticker and glue it to your monitor.
 user.change_password = Change password
+user.contact_list = Contact List
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
