--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,6 +48,11 @@ user.pass_change_ok=Password successfully changed
 user.pass_change_ok_msg=You have updated your passwords successfully. Now write it on a sticker and glue it to your monitor.
 user.change_password = Change password
 user.contact_list = Contact List
+user.contact_list_empty = Your contact list is empty
+user.contact_add_success = Contact add success!
+user.contact_add_msg= was successfully added to your contact list!
+user.contact_remove_success= Contact remove success!
+user.contact_remove_msg = was successfully removed to your contact list!
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
