Logic update on add/remove contact. You can`t add duplicate contact or remove non-existing contact. FE touch up.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,14 @@ user.contact_add_success = Contact add success!
 user.contact_add_msg= was successfully added to your contact list!
 user.contact_remove_success= Contact remove success!
 user.contact_remove_msg = was successfully removed to your contact list!
+user.add_as_contact = Add to your contact list:
+user.add_as_contact_msg=Add this user to your contacts list to find him faster
+user.add_as_contact_btn=Add
+user.contact_already_added = User is already in your contact list!
+user.contact_already_added_msg = is already in your contact list. You can`t add twice.
+user.contact_not_in_list= User is not in your contact list
+user.contact_not_in_list_msg = is not in your contact list and therefore cannot be removed
+user.remove_from_contacts=Remove from contacts
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
