Base logic for user id/selfie uploading

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,6 +30,8 @@ user.send_funds_msg=Send funds quickly and reliably form your wallet to this use
 user.request_funds_msg=Make a request for funding from this user
 user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
 user.cpanel=Control Panel
+user.vpanel=Verification Panel
+user.undelete = Undelete
 user.already_exists_msg=As per usual, the good usernames are already taken. Pick another...
 user.verify_ok=Congratulations, your email has been verified.
 user.verify_ok_msg=<a th:href="@{/auth/login}">Click here to Login</a>
@@ -61,6 +63,7 @@ user.contact_already_added_msg = is already in your contact list. You can`t add 
 user.contact_not_in_list= User is not in your contact list
 user.contact_not_in_list_msg = is not in your contact list and therefore cannot be removed
 user.remove_from_contacts=Remove from contacts
+user.id_verification=Verify Identity
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
