Upload logic update - user is not permitted to upload more than once. FE update on upload.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -64,6 +64,10 @@ user.contact_not_in_list= User is not in your contact list
 user.contact_not_in_list_msg = is not in your contact list and therefore cannot be removed
 user.remove_from_contacts=Remove from contacts
 user.id_verification=Verify Identity
+user.id_verification_title=ID Verification
+user.id_verification_msg=Upload a scan of your ID card and a Selfie
+user.upload_id_success=Successful upload!
+user.upload_id_success_msg= You have uploaded your files. We'll be looking into them and process them shortly.
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
