--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -68,6 +68,8 @@ user.id_verification_title=ID Verification
 user.id_verification_msg=Upload a scan of your ID card and a Selfie
 user.upload_id_success=Successful upload!
 user.upload_id_success_msg= You have uploaded your files. We'll be looking into them and process them shortly.
+user.admin_demote_title = User has been demoted and is now regular user
+user.admin_promote_title = User rights were set to level: admin
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
