Added Cards section to the header nav bar.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ user.already-exists=This user already exists!
 user.login=Login
 user.logout=Logout
 user.my_wallet=My Wallet
+user.my_cards=My Cards
 user.my_transactions=My Transactions
 user.edit_profile=Edit Profile
 user.management=User Management
