Implemented display wallets for user and create a new wallet.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ user.password=Password
 user.already-exists=This user already exists!
 user.login=Login
 user.logout=Logout
-user.my_wallet=My Wallet
+user.my_wallets=My Wallets
 user.my_cards=My Cards
 user.my_transactions=My Transactions
 user.edit_profile=Edit Profile
@@ -52,6 +52,7 @@ user.pass_change_ok_msg=You have updated your passwords successfully. Now write 
 user.change_password = Change password
 user.contact_list = Contact List
 user.contact_list_empty = Your contact list is empty
+user.wallets_list_empty = You don't have any wallets yet.
 user.contact_add_success = Contact add success!
 user.contact_add_msg= was successfully added to your contact list!
 user.contact_remove_success= Contact remove success!
