Photo Verification(sending appr/disappr emails, setting field db to apprv, returning proper admin views on action appr/disappr)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,6 +75,7 @@ user.admin_promote_title = User rights were set to level: admin
 user.invitation_msg = Fill in the email of the person you want to invite:
 user.user_invitation_sent=Invitation sent!
 user.user_invitation_sent_msg= You have successful sent the invitation. 
+user.nothing_to_upload= You have not provided any files for upload!
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
