--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,7 +79,8 @@ user.nothing_to_upload= You have not provided any files for upload!
 user.created_on=User created on
 user.last_update_on=User updated on
 user.tfa_failed_title= 2FA Failed
-user.tfa_failed_msg= You have failed to properly authenticate by 2FA.
+user.tfa_failed_msg= You have failed to properly authenticate by 2FA
+user.contact_form_ok= Your message was sent
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
