--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -81,6 +81,8 @@ user.last_update_on=User updated on
 user.tfa_failed_title= 2FA Failed
 user.tfa_failed_msg= You have failed to properly authenticate by 2FA
 user.contact_form_ok= Your message was sent
+user.list_waiting_verification =List of users waiting for photo verification
+user.list_waiting_verification_empty=No users are currently waiting photo verification
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
