--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,6 +83,9 @@ user.tfa_failed_msg= You have failed to properly authenticate by 2FA
 user.contact_form_ok= Your message was sent
 user.list_waiting_verification =List of users waiting for photo verification
 user.list_waiting_verification_empty=No users are currently waiting photo verification
+user.pass_reset_title = Password reset procedure complete
+user.pass_reset_msg = If you have provided the correct data for username and email, you will receive an email from us shortly!
+user.pass_reset_instructions=Please fill in your username and email. If they match, we will send you an email for further actions.
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
