User invitation system update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,6 +86,8 @@ user.list_waiting_verification_empty=No users are currently waiting photo verifi
 user.pass_reset_title = Password reset procedure complete
 user.pass_reset_msg = If you have provided the correct data for username and email, you will receive an email from us shortly!
 user.pass_reset_instructions=Please fill in your username and email. If they match, we will send you an email for further actions.
+user.invitation_complete=Registration by invitation success!
+user.invitation_complete_msg = By completing the registration through invitation you and your inviter have received bonus amounts on your accounts.
 
 server.403=Forbidden gate stands, <br>Access denied, paths unseen, <br>Silenced, barred embrace.
 server.403_explanation=Seems you have run into a 403 error. Here`s a little haiku for compensation:
