Implemented functionality for admins to change the default interest rate. Made some templates prettier.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ user.send_funds_msg=Send funds quickly and reliably form your wallet to this use
 user.request_funds_msg=Make a request for funding from this user
 user.poke_msg=Poke this user to make them aware you are also using this platform or just for fun
 user.cpanel=Control Panel
+user.update_interest=Update Interest Rate
 user.vpanel=Verification Panel
 user.undelete = Undelete
 user.already_exists_msg=As per usual, the good usernames are already taken. Pick another...
