Implemented savings wallet logic in the SavingsWalletMvcController.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,6 +54,7 @@ user.change_password = Change password
 user.contact_list = Contact List
 user.contact_list_empty = Your contact list is empty
 user.wallets_list_empty = You don't have any wallets yet.
+user.savings_wallets_list_empty = You don't have any savings wallets yet.
 user.contact_add_success = Contact add success!
 user.contact_add_msg= was successfully added to your contact list!
 user.contact_remove_success= Contact remove success!
